--- a/static/index.html
+++ b/static/index.html
@@ -514,12 +514,23 @@
                 </div>
             </div>
 
-            <div v-else
-                class="flex-1 flex items-center justify-center text-gray-300 dark:text-[#4C566A] flex-col gap-4 bg-gray-50 dark:bg-[#2E3440]">
-                <span class="material-symbols-rounded text-gray-200 dark:text-[#3B4252] text-6xl mb-4">note_stack</span>
-                <div class="text-center">
-                    <h3 class="text-lg font-medium text-gray-400 dark:text-[#4C566A]">No Note Selected</h3>
-                    <p class="text-sm">Select a note from the sidebar or create a new one.</p>
+            <div v-else class="flex-1 flex flex-col gap-4 bg-gray-50 dark:bg-[#2E3440] overflow-y-auto">
+                <div v-if="changelogContent" class="max-w-3xl w-full mx-auto p-8">
+                    <div class="mb-4 flex items-center gap-2 text-slate-400">
+                        <span class="material-symbols-rounded">info</span>
+                        <span class="text-sm font-bold uppercase tracking-widest">Latest Updates</span>
+                    </div>
+                    <div class="markdown-body bg-transparent" style="font-size: 12px !important"
+                        v-html="changelogContent"></div>
+                </div>
+                <div v-else
+                    class="flex-1 flex items-center justify-center flex-col gap-4 text-gray-300 dark:text-[#4C566A]">
+                    <span
+                        class="material-symbols-rounded text-gray-200 dark:text-[#3B4252] text-6xl mb-4">note_stack</span>
+                    <div class="text-center">
+                        <h3 class="text-lg font-medium text-gray-400 dark:text-[#4C566A]">No Note Selected</h3>
+                        <p class="text-sm">Select a note from the sidebar or create a new one.</p>
+                    </div>
                 </div>
             </div>
         </main>
