--- a/static/index.html
+++ b/static/index.html
@@ -28,6 +28,24 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/static/style.css?v=6">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/mobile-drag-drop@2.3.0-rc.2/default.css">
+    <script src="https://cdn.jsdelivr.net/npm/mobile-drag-drop@2.3.0-rc.2/index.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/mobile-drag-drop@2.3.0-rc.2/scroll-behaviour.min.js"></script>
+    <script>
+        // options are optional ;)
+        var mobileDragDropOptions = {
+            // enable these if you want to prevent scrolling while dragging
+            // dragImageTranslateOverride: MobileDragDrop.scrollBehaviourDragImageTranslateOverride
+        };
+        // wait for the resources to be loaded
+        document.addEventListener('DOMContentLoaded', function () {
+            MobileDragDrop.polyfill(mobileDragDropOptions);
+        });
+
+        // Fix for iOS Safari to prevent scrolling when starting drag
+        window.addEventListener('touchmove', function () { }, { passive: false });
+    </script>
+
     <script src="https://accounts.google.com/gsi/client" async defer></script>
 </head>
 
@@ -374,13 +392,14 @@
         </div>
 
         <!-- Main Editor -->
-        <main class="flex-1 flex flex-col bg-white dark:bg-[#2E3440] overflow-hidden">
+        <main class="flex-1 flex flex-col bg-white dark:bg-[#2E3440] overflow-hidden"
+            @click="isSidebarOpen && (isSidebarOpen = false)">
             <div v-if="selectedNote" class="flex flex-col h-full">
                 <!-- Toolbar -->
                 <div
                     class="h-14 border-b border-slate-100 dark:border-[#434C5E] bg-white/80 dark:bg-[#2E3440]/80 backdrop-blur-sm sticky top-0 z-30 flex justify-between items-center px-4 flex-shrink-0 transition-colors duration-300">
                     <div class="flex items-center flex-1 mr-4 overflow-hidden">
-                        <button @click="toggleSidebar"
+                        <button @click.stop="toggleSidebar"
                             class="p-2 mr-2 text-slate-400 dark:text-[#D8DEE9] hover:text-slate-600 dark:hover:text-[#ECEFF4] hover:bg-slate-100 dark:hover:bg-[#4C566A] rounded-lg transition-colors flex-shrink-0"
                             title="Toggle Sidebar">
                             <span class="material-symbols-rounded">menu</span>
@@ -447,7 +466,7 @@
                 </div>
 
                 <!-- Split View -->
-                <div class="flex-1 flex overflow-hidden" @click="isSidebarOpen && (isSidebarOpen = false)">
+                <div class="flex-1 flex overflow-hidden">
                     <!-- Editor -->
                     <div v-show="viewMode !== 'preview'"
                         class="flex-1 flex flex-col border-r border-slate-100 dark:border-[#434C5E] relative group"
