--- a/static/index.html
+++ b/static/index.html
@@ -659,73 +659,75 @@
 
                             <!-- Fixed Formatting Toolbar (Visible on Selection) -->
                             <!-- Fixed Formatting Toolbar -->
-                            <div
-                                class="flex-none border-b border-slate-100 dark:border-[#434C5E] bg-white dark:bg-[#2E3440] p-1 flex items-center gap-1 z-20">
-                                <button @mousedown.prevent="formatText('bold')"
-                                    class="p-1 hover:bg-slate-100 dark:hover:bg-[#434C5E] rounded transition-colors"
-                                    title="Bold (Cmd+B)">
-                                    <span class="material-symbols-rounded text-[18px]">format_bold</span>
-                                </button>
-                                <button @mousedown.prevent="formatText('italic')"
-                                    class="p-1 hover:bg-slate-100 dark:hover:bg-[#434C5E] rounded transition-colors"
-                                    title="Italic (Cmd+I)">
-                                    <span class="material-symbols-rounded text-[18px]">format_italic</span>
-                                </button>
-                                <button @mousedown.prevent="formatText('strike')"
-                                    class="p-1 hover:bg-slate-100 dark:hover:bg-[#434C5E] rounded transition-colors"
-                                    title="Strikethrough">
-                                    <span class="material-symbols-rounded text-[18px]">strikethrough_s</span>
-                                </button>
-                                <button @mousedown.prevent="formatText('code')"
-                                    class="p-1 hover:bg-slate-100 dark:hover:bg-[#434C5E] rounded transition-colors"
-                                    title="Inline Code">
-                                    <span class="material-symbols-rounded text-[18px]">code</span>
-                                </button>
-                                <button @mousedown.prevent="formatText('codeblock')"
-                                    class="p-1 hover:bg-slate-100 dark:hover:bg-[#434C5E] rounded transition-colors"
-                                    title="Code Block">
-                                    <span class="material-symbols-rounded text-[18px]">terminal</span>
-                                </button>
-                                <div class="w-[1px] h-4 bg-slate-200 dark:bg-[#4C566A] mx-1"></div>
-                                <button @mousedown.prevent="formatText('link')"
-                                    class="p-1 hover:bg-slate-100 dark:hover:bg-[#434C5E] rounded transition-colors"
-                                    title="Link (Cmd+K)">
-                                    <span class="material-symbols-rounded text-[18px]">link</span>
-                                </button>
-                                <div class="w-[1px] h-4 bg-slate-200 dark:bg-[#4C566A] mx-1"></div>
-                                <button @mousedown.prevent="formatText('h1')"
-                                    class="p-1 hover:bg-slate-100 dark:hover:bg-[#434C5E] rounded transition-colors"
-                                    title="Heading 1">
-                                    <span class="material-symbols-rounded text-[18px]">format_h1</span>
-                                </button>
-                                <button @mousedown.prevent="formatText('h2')"
-                                    class="p-1 hover:bg-slate-100 dark:hover:bg-[#434C5E] rounded transition-colors"
-                                    title="Heading 2">
-                                    <span class="material-symbols-rounded text-[18px]">format_h2</span>
-                                </button>
-                                <button @mousedown.prevent="formatText('h3')"
-                                    class="p-1 hover:bg-slate-100 dark:hover:bg-[#434C5E] rounded transition-colors"
-                                    title="Heading 3">
-                                    <span class="material-symbols-rounded text-[18px]">format_h3</span>
-                                </button>
-                                <button @mousedown.prevent="formatText('h4')"
-                                    class="p-1 hover:bg-slate-100 dark:hover:bg-[#434C5E] rounded transition-colors"
-                                    title="Heading 4">
-                                    <span class="material-symbols-rounded text-[18px]">format_h4</span>
-                                </button>
-                                <button @mousedown.prevent="formatText('h5')"
-                                    class="p-1 hover:bg-slate-100 dark:hover:bg-[#434C5E] rounded transition-colors"
-                                    title="Heading 5">
-                                    <span class="material-symbols-rounded text-[18px]">format_h5</span>
-                                </button>
-                            </div>
-
                             <div class="flex-1 relative overflow-hidden">
+                                <!-- Floating Formatting Toolbar -->
+                                <div class="absolute top-0 left-0 right-0 z-20 border-b border-slate-100 dark:border-[#434C5E] bg-white dark:bg-[#2E3440] p-1 flex items-center gap-1 transition-all duration-300 transform origin-top shadow-sm"
+                                    :class="hasSelection ? 'translate-y-0 opacity-100' : '-translate-y-full opacity-0 pointer-events-none'">
+                                    <button @mousedown.prevent="formatText('bold')"
+                                        class="p-1 hover:bg-slate-100 dark:hover:bg-[#434C5E] rounded transition-colors"
+                                        title="Bold (Cmd+B)">
+                                        <span class="material-symbols-rounded text-[18px]">format_bold</span>
+                                    </button>
+                                    <button @mousedown.prevent="formatText('italic')"
+                                        class="p-1 hover:bg-slate-100 dark:hover:bg-[#434C5E] rounded transition-colors"
+                                        title="Italic (Cmd+I)">
+                                        <span class="material-symbols-rounded text-[18px]">format_italic</span>
+                                    </button>
+                                    <button @mousedown.prevent="formatText('strike')"
+                                        class="p-1 hover:bg-slate-100 dark:hover:bg-[#434C5E] rounded transition-colors"
+                                        title="Strikethrough">
+                                        <span class="material-symbols-rounded text-[18px]">strikethrough_s</span>
+                                    </button>
+                                    <button @mousedown.prevent="formatText('code')"
+                                        class="p-1 hover:bg-slate-100 dark:hover:bg-[#434C5E] rounded transition-colors"
+                                        title="Inline Code">
+                                        <span class="material-symbols-rounded text-[18px]">code</span>
+                                    </button>
+                                    <button @mousedown.prevent="formatText('codeblock')"
+                                        class="p-1 hover:bg-slate-100 dark:hover:bg-[#434C5E] rounded transition-colors"
+                                        title="Code Block">
+                                        <span class="material-symbols-rounded text-[18px]">terminal</span>
+                                    </button>
+                                    <div class="w-[1px] h-4 bg-slate-200 dark:bg-[#4C566A] mx-1"></div>
+                                    <button @mousedown.prevent="formatText('link')"
+                                        class="p-1 hover:bg-slate-100 dark:hover:bg-[#434C5E] rounded transition-colors"
+                                        title="Link (Cmd+K)">
+                                        <span class="material-symbols-rounded text-[18px]">link</span>
+                                    </button>
+                                    <div class="w-[1px] h-4 bg-slate-200 dark:bg-[#4C566A] mx-1"></div>
+                                    <button @mousedown.prevent="formatText('h1')"
+                                        class="p-1 hover:bg-slate-100 dark:hover:bg-[#434C5E] rounded transition-colors"
+                                        title="Heading 1">
+                                        <span class="material-symbols-rounded text-[18px]">format_h1</span>
+                                    </button>
+                                    <button @mousedown.prevent="formatText('h2')"
+                                        class="p-1 hover:bg-slate-100 dark:hover:bg-[#434C5E] rounded transition-colors"
+                                        title="Heading 2">
+                                        <span class="material-symbols-rounded text-[18px]">format_h2</span>
+                                    </button>
+                                    <button @mousedown.prevent="formatText('h3')"
+                                        class="p-1 hover:bg-slate-100 dark:hover:bg-[#434C5E] rounded transition-colors"
+                                        title="Heading 3">
+                                        <span class="material-symbols-rounded text-[18px]">format_h3</span>
+                                    </button>
+                                    <button @mousedown.prevent="formatText('h4')"
+                                        class="p-1 hover:bg-slate-100 dark:hover:bg-[#434C5E] rounded transition-colors"
+                                        title="Heading 4">
+                                        <span class="material-symbols-rounded text-[18px]">format_h4</span>
+                                    </button>
+                                    <button @mousedown.prevent="formatText('h5')"
+                                        class="p-1 hover:bg-slate-100 dark:hover:bg-[#434C5E] rounded transition-colors"
+                                        title="Heading 5">
+                                        <span class="material-symbols-rounded text-[18px]">format_h5</span>
+                                    </button>
+                                </div>
+
                                 <textarea ref="editorRef"
                                     class="w-full h-full resize-none outline-none bg-transparent p-4 font-mono text-sm leading-relaxed text-slate-800 dark:text-gray-200 overflow-y-scroll"
                                     :style="{ fontSize: fontSize + 'px' }" :value="selectedNote.content || ''"
                                     @input="handleInput" @scroll="handleScroll" @keydown="handleKeydown"
-                                    spellcheck="false"></textarea>
+                                    @select="checkSelection" @keyup="checkSelection" @mouseup="checkSelection"
+                                    @click="checkSelection" @focus="checkSelection" spellcheck="false"></textarea>
                             </div>
                         </div>
 
