--- a/static/index.html
+++ b/static/index.html
@@ -63,6 +63,21 @@
         .dnd-poly-drag-image {
             opacity: 1 !important;
         }
+
+        /* CodeMirror 6 Helper Styles */
+        .cm-editor {
+            height: 100%;
+            outline: none !important;
+        }
+
+        .cm-scroller {
+            overflow: auto !important;
+            font-family: 'JetBrains Mono', monospace !important;
+        }
+
+        .cm-panel.cm-search {
+            display: none !important;
+        }
     </style>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
 </head>
@@ -565,14 +580,19 @@
                                 <span class="text-[10px] opacity-60 font-medium tracking-tight">Editor & Preview</span>
                             </template>
                         </div>
+
+                        <!-- Toolbar Right -->
+                        <div class="ml-auto flex items-center pr-2 gap-2 h-full pb-1.5">
+                        </div>
                     </div>
 
                     <!-- Split Columns -->
-                    <div class="flex-1 flex overflow-hidden">
+                    <div class="flex-1 flex overflow-hidden split-container">
                         <!-- Editor -->
                         <div v-show="viewMode !== 'preview'"
                             class="flex-1 flex flex-col border-r border-slate-100 dark:border-[#434C5E] relative group"
-                            :class="isDarkMode ? 'dark' : ''">
+                            :class="isDarkMode ? 'dark' : ''"
+                            :style="viewMode === 'split' ? { flex: `0 0 ${splitRatio}%` } : {}">
 
                             <!-- Search Widget -->
                             <div v-if="searchState.show"
@@ -659,10 +679,10 @@
 
                             <!-- Fixed Formatting Toolbar (Visible on Selection) -->
                             <!-- Fixed Formatting Toolbar -->
-                            <div class="flex-1 relative overflow-hidden">
-                                <!-- Floating Formatting Toolbar -->
-                                <div class="absolute top-0 left-0 right-0 z-20 border-b border-slate-100 dark:border-[#434C5E] bg-white dark:bg-[#2E3440] p-1 flex items-center gap-1 transition-all duration-300 transform origin-top shadow-sm"
-                                    :class="hasSelection ? 'translate-y-0 opacity-100' : '-translate-y-full opacity-0 pointer-events-none'">
+                            <div class="flex-1 relative overflow-hidden flex flex-col">
+                                <!-- Static Formatting Toolbar -->
+                                <div
+                                    class="w-full border-b border-slate-100 dark:border-[#434C5E] bg-white dark:bg-[#2E3440] p-1 flex items-center gap-1 flex-none z-10">
                                     <button @mousedown.prevent="formatText('bold')"
                                         class="p-1 hover:bg-slate-100 dark:hover:bg-[#434C5E] rounded transition-colors"
                                         title="Bold (Cmd+B)">
@@ -722,25 +742,36 @@
                                     </button>
                                 </div>
 
-                                <textarea ref="editorRef"
-                                    class="w-full h-full resize-none outline-none bg-transparent p-4 font-mono text-sm leading-relaxed text-slate-800 dark:text-gray-200 overflow-y-scroll"
-                                    :style="{ fontSize: fontSize + 'px' }" :value="selectedNote.content || ''"
-                                    @input="handleInput" @scroll="handleScroll" @keydown="handleKeydown"
-                                    @select="checkSelection" @keyup="checkSelection" @mouseup="checkSelection"
-                                    @click="checkSelection" @focus="checkSelection" spellcheck="false"></textarea>
+                                <!-- CodeMirror 6 Container -->
+                                <div ref="editorRef" class="w-full flex-1 overflow-hidden"
+                                    :style="{ fontSize: fontSize + 'px' }"></div>
                             </div>
                         </div>
 
+                        <!-- Resize Handle -->
+                        <div v-if="viewMode === 'split'"
+                            class="w-2 hover:bg-blue-500 cursor-col-resize z-10 hidden md:block transition-colors opacity-0 hover:opacity-100 dark:hover:bg-blue-400"
+                            :class="{ 'opacity-100 bg-blue-500': false }" @mousedown="startResize"></div>
+
+                        <!-- Preview Pane -->
+                        <div class="flex flex-col h-full bg-slate-50 dark:bg-[#2E3440] border-l border-slate-200 dark:border-[#3B4252] overflow-hidden transition-all duration-300 relative"
+                            :class="{ 'hidden': viewMode === 'edit', 'flex-1': viewMode === 'preview' }"
+                            :style="viewMode === 'split' ? { flex: `0 0 ${100 - splitRatio}%` } : {}">
 
 
-                        <!-- Preview -->
-                        <div v-show="viewMode !== 'edit'" class="flex-1 flex flex-col relative group overflow-hidden">
-                            <!-- Header -->
 
-                            <div class="flex-1 overflow-hidden relative">
-                                <div ref="previewRef" @scroll="handleScroll" v-html="previewContent"
-                                    :style="'font-size: ' + fontSize + 'px !important'"
-                                    class="markdown-body p-6 overflow-y-auto h-full bg-white dark:bg-[#2E3440] transition-colors">
+
+
+                            <!-- Preview -->
+                            <div v-show="viewMode !== 'edit'"
+                                class="flex-1 flex flex-col relative group overflow-hidden">
+                                <!-- Header -->
+
+                                <div class="flex-1 overflow-hidden relative">
+                                    <div ref="previewRef" @scroll="handleScroll" v-html="previewContent"
+                                        :style="'font-size: ' + fontSize + 'px !important; padding: 5px !important; padding-top: 40px !important'"
+                                        class="markdown-body overflow-y-auto h-full bg-white dark:bg-[#2E3440] transition-colors">
+                                    </div>
                                 </div>
                             </div>
                         </div>
