--- a/static/index.html
+++ b/static/index.html
@@ -14,6 +14,10 @@
         tailwind.config = {
             darkMode: 'class',
         }
+        // Immediate Dark Mode Init to prevent white flash
+        if (localStorage.getItem('shynote_dark_mode') !== 'false') {
+            document.documentElement.classList.add('dark');
+        }
     </script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked@4.3.0/marked.min.js"></script>
@@ -85,6 +89,11 @@
 <body
     class="bg-gray-100 dark:bg-[#2E3440] h-screen overflow-hidden text-gray-800 dark:text-[#D8DEE9] font-sans transition-colors duration-300">
     <div id="app" class="flex h-full">
+        <!-- Splash Screen (Auto-removed when Vue mounts) -->
+        <div class="fixed inset-0 z-[9999] flex flex-col items-center justify-center bg-gray-100 dark:bg-[#2E3440]"
+            v-if="false">
+            <img src="/static/logo.png" class="w-24 h-24 rounded-full shadow-2xl animate-pulse" alt="SHYNOTE">
+        </div>
         <!-- Login Modal -->
         <div v-if="!isAuthenticated"
             class="fixed inset-0 bg-black bg-opacity-50 z-50 flex items-center justify-center backdrop-blur-sm">
@@ -843,7 +852,7 @@
             });
         }
     </script>
-    <script src="/static/app.js?v=7" type="module"></script>
+    <script src="/static/app.js?v=8" type="module"></script>
 </body>
 
 </html>
